sass: #fix contrast mode (remove references to obsolete images)
(cleanup of tile view spec)

--- a/app/assets/stylesheets/combos/_ui-resources-grid.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-grid.sass
@@ -112,14 +112,3 @@
     .ui-thumbnail.video .ui-thumbnail-image-wrapper
       background: $white image-url("backgrounds/thumb-video-backg@2x.png") 0 0px no-repeat
       background-size: 138px 138px
-
-/* Projection Styles
- *-----------------------------------------
-
-@if $projection
-
-  .grid.active
-    .ui-thumbnail.media-catalog:hover
-      background: $white image-url("backgrounds/thumb-catalog-backg-projct.png") 3px -4px no-repeat
-    .ui-thumbnail.video .ui-thumbnail-image-wrapper
-      background: $white image-url("backgrounds/thumb-video-backg-projct.png") 0 0px no-repeat
