--- a/app/assets/stylesheets/components/_ui-thumb-catalog.sass
+++ b/app/assets/stylesheets/components/_ui-thumb-catalog.sass
@@ -50,10 +50,3 @@
       font-size: $font-xs
       overflow: hidden
       padding: 0 5px
-
-/* Projection Styles
- *-----------------------------------------
-
-@if $projection
-  .ui-thumbnail.media-catalog
-    background: transparent image-url("backgrounds/thumb-catalog-backg-projct.png") 3px -4px no-repeat
